<resources>
    <string name="app_name">Karen Gold</string>
    <string name="img_splash">imgsplash</string>
    <string name="price_gold_and_money">قیمت طلا و ارز</string>
    <string name="description_splash">به روز ترین قیمت روز طلا و ارز جهان</string>
    <string name="karen_studio">Karen Studio</string>
    <string name="price_gold">قیمت طلا</string>
    <string name="price_money">قیمت ارز</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="exit">خروج</string>
    <string name="check_connect">لطفاً اتصال اینترنت خود را بررسی کنید.</string>
    <string name="no_internet">No Internet</string>
    <string name="price_cryptocurrency">ارزدیجیتال</string>
</resources>