<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border_yellow_alert"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/no_internet"
        android:src="@drawable/ic_no_internet"
        app:tint="@color/gold_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/check_connect"
        android:textColor="@color/white"
        android:textSize="55px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/back_view_black"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="40px" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/try_again"
            android:textColor="@color/black"
            android:textSize="40px" />

        <View
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
